<?xml version="1.0"?>
<package>
  <name>asimcar</name>
  <version>0.0.1</version>
  <description>ASIMcar High-level package</description>

  <author>Xihui Wu</author>
  <maintainer email="wxh@vt.edu">Xihui Wu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joy</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rostopic</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
