<?xml version="1.0"?>
<package>
  <name>ADAS</name>
  <version>0.0.1</version>
  <description>
    Metapackage for Advanced Driving Assistance System function.
  </description>

  <maintainer email="wxh@vt.edu">Xihui Wu</maintainer>
  <author email="wxh@vt.edu">Xihui Wu</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lane_keeping</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
