<?xml version="1.0"?>
<package>
  <name>bicycle_msgs</name>
  <version>0.0.1</version>
  <description>
    ROS message definitions for the bicycle model.
  </description>

  <maintainer email="wxh@vt.edu">Xihui</maintainer>
  <author email="wxh@vt.edu">Xihui</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
