<?xml version="1.0"?>
<package>
  <name>navi</name>
  <version>0.0.1</version>
  <description>
    Metapackage for ROS interface to the navigation tasks.
  </description>

  <maintainer email="wxh@vt.edu">Xihui Wu</maintainer>
  <author email="wxh@vt.edu">Xihui Wu</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>imu_ekf</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
