<?xml version="1.0"?>
<package>
  <name>front_radar</name>
  <version>0.0.1</version>
  <description>ASIMcar front radar package</description>

  <author>Xihui Wu</author>
  <maintainer email="wxh@vt.edu">Xihui Wu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
    
  <run_depend>std_msgs</run_depend>
  
</package>
