  
<?xml version="1.0"?>
<package>
  <name>sensor</name>
  <version>0.0.1</version>
  <description>
    Metapackage for all sensor components.
  </description>

  <maintainer email="wxh@vt.edu">Xihui Wu</maintainer>
  <author email="wxh@vt.edu">Xihui Wu</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>front_cam</run_depend>
  <run_depend>ydlidar</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
