<?xml version="1.0"?>
<package>
  <name>ydlidar</name>
  <version>1.0</version>
  <description>The ydlidar package</description>

  <maintainer email="shao@eaibot.com">shao</maintainer>

  <author>Xihui Wu</author>
  <maintainer email="wxh@vt.edu">Xihui Wu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
